Made the StartupWithWindows and MinimizeToTray options settable by the user.

--- a/Code/PinWindows/Properties/Settings.settings
+++ b/Code/PinWindows/Properties/Settings.settings
@@ -2,7 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PinWindows.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="StartupWithWindows" Type="System.Boolean" Scope="Application">
+    <Setting Name="StartupWithWindows" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="MinimizeToTray" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
